ajouté commande pour ajout d articles depuis flux rss + corrigé affichage dans le template blog

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -18,8 +18,10 @@
                 <div class="card-body">
                     <h3 class="card-title">{{post.title}}</h3>
                     <p class="card-text">{{ post.content|raw }}</p>
-                    <p class="card-text"><small class="text-muted">Posté le {{post.createdAt|date("d/m/y")}} 
-                    par <cite title="auteur">{{ post.author.__toString|default('-')}}</cite></small></p>
+                    <p class="card-text"><small class="text-muted">Posté le {{post.createdAt|date("d/m/y")}} par 
+                    <cite title="auteur">
+                        {{ attribute(post.author, '__toString') is defined ? post.author.__toString : post.rssfeedname|default('-') }}
+                    </cite></small></p>
                 </div>
             </div>
 
