ajouté visibilité sur vu des fichiers par les pharmacies

--- a/templates/backend/file/index.html.twig
+++ b/templates/backend/file/index.html.twig
@@ -18,6 +18,7 @@
                 <th>Description</th>
                 <th>Actif</th>
                 <th>Commercial</th>
+                <th>Lu par</th>
             </tr>
         </thead>
         <tbody>
