ajouté info adherent depuis le dans table des pharmacie + sécurisé route reservées à l admin

--- a/templates/backend/company/index.html.twig
+++ b/templates/backend/company/index.html.twig
@@ -16,10 +16,10 @@
                     <th>#</th>
                     <th>Nom</th>   
                     <th>Adresse</th>
-                    {# <th>Complément</th> #}
                     <th>Code postal</th>
                     <th>Ville</th>
                     <th>Gestionnaire</th>
+                    <th>Adhérent depuis</th>
                     <th>Commercial</th>
                 </tr>
             </thead>
