ajouté gestion public/privé sur les articles + infos sur contrat de la pharmacie + info sur ancienneté + info sur nombre de vues pour les fichier + mis à jours les tables correspondantes et les forms

--- a/templates/backend/post/index.html.twig
+++ b/templates/backend/post/index.html.twig
@@ -16,8 +16,9 @@
                 <th>#</th>
                 <th>Titre</th>
                 <th>Auteur</th>
-                <th>Image</th>
+                <th>Source</th>
                 <th>Publié</th>
+                <th>Visibilité</th>
             </tr>
         </thead>
         <tbody>
