--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -21,6 +21,40 @@
         </header>
         <!-- M A I N  S E C T I O N -->
         <main class="main container p-0">
+            <!-- Citation Actu -->
+            <section id="actu" class="container-fluid p-0 text-center py-3">
+                <!-- Section heading -->
+                <h2 class="titre h1-responsive font-weight-bold my-5">Actualités</h2>
+                <div class="wrapper-carousel-fix">
+                    <!-- Carousel Wrapper -->
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                        <img class="d-block w-100" src="..." alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="..." alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="..." alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    </div>
+                </div>
+            </section>
             <!-- Citation Section -->
             <section id="about" class="container-fluid p-0 text-center py-3">
                 <!-- Section heading -->
@@ -36,7 +70,7 @@
                             <div class="testimonial">
                                 <!--Content-->
                                 <p class="m-5 font-weight-lighter font-italic">
-                                <i class="fas fa-quote-left"></i>  Ynovagroup est un groupement créé par des pharmaciens de votre région qui connaissent vos problématiques et les rencrontrent tous les jours.
+                                <i class="fas fa-quote-left"></i>Ynovagroup est un groupement créé par des pharmaciens de votre région qui connaissent vos problématiques et les rencrontrent tous les jours.
                                 </p>
                                 <p class="m-5 font-weight-lighter font-italic">
                                 Nous sommes composés d'une équipe pluridisciplinaire de pharmaciens et de professionnels du secteur pharmaceutique.
@@ -69,6 +103,7 @@
                             Vous préservez votre indépendance professionnelle
                         </p>
                     </div>
+                    <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div>  
             <!-- Satisfaction -->
