--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -56,7 +56,7 @@
                 </div>
             </section>
             <!-- Citation Section -->
-            <section id="about" class="container-fluid p-0 text-center py-3">
+            <section id="about" class="container-fluid p-0 text-center py-3 mt-5">
                 <!-- Section heading -->
                 <h2 class="titre h1-responsive font-weight-bold my-5">Qui sommes-nous ?</h2>
                 <div class="wrapper-carousel-fix">
@@ -85,7 +85,6 @@
                                 <img src="{{ asset('images/ynovagroup_logo.png') }}" class="rounded-circle img-fluid"
                                     alt="Ynovagroup Logo" width="300" height="100">
                                 </div>
-                                {# <h5 class="font-weight-bold text-uppercase">Ynovagroup</h5> #}
                                 <h6 class="font-weight-lighter">Votre groupement de pharmaciens indépendants</h6>
                             </div>
                         </div>
@@ -116,6 +115,7 @@
                             Votre confiance est notre préoccupation
                         </p>
                     </div>
+                     <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div>  
             <!-- Soutien -->
@@ -128,6 +128,7 @@
                             Toujours à vos côtés pour une relation pérenne
                         </p>
                     </div>
+                     <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div>  
             <!-- Engagement -->
@@ -137,9 +138,10 @@
                     <div class="valeurs-text m-5">
                         <h3 class="valeurs-text-title text-uppercase">Engagement</h3>
                             <p class="m-5 font-weight-lighter font-italic">
-                            Notre équipe s'engage dans une démarche proactive axée sur la qualité
+                            Notre équipe s'engage dans une démarche proactive de qualité
                         </p>
                     </div>
+                     <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div> 
             <!-- Partage -->
@@ -152,6 +154,7 @@
                             Échange et communication, facteurs clés de synergie
                         </p>
                     </div>
+                     <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div>  
             <!-- Excellence -->
@@ -164,13 +167,14 @@
                             L'expertise de professionnel entièrement à votre service
                         </p>
                     </div>
+                     <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div>
             </section>
             <!-- N O T R E  D I F F E R E N C E -->
             <section id="difference">
-                <div class="container-fluid p-0 text-center m-5">
-                <h2 class="titre-difference h1-responsive font-weight-bold m-5">Notre différence</h2>
+                <div class="container-fluid p-0 text-center">
+                <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
                     <div class="panel">
                         <div class="panel-box">
                             <div class="panel-box-text m-3">
