Page Partenaires OK

--- a/templates/home/partenaires.html.twig
+++ b/templates/home/partenaires.html.twig
@@ -6,49 +6,57 @@
 {% block body %}
 
 <!-- Partenaires -->
-<div class="container-fluid p-0">
-    <main class="container-fluid m-5">
-    <h1 class="h2 mt-3">Nos partenaires</h1>
+<div id="partner" class="container-fluid p-0">
+    <main class="container-fluid mt-5">
+    <h1 class="h2 mt-3 text-center">Nos partenaires</h1>
     <section id="partenaires">
         <div class="partenaire">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
-            <a class="text-center" href="">Lien</a>
+            <a class="" href="">Lien</a>
         </div>
         <div class="partenaire">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
-            <a class="text-center" href="">Lien</a>
+            <a class="" href="">Lien</a>
         </div>
         <div class="partenaire">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
-            <a class="text-center" href="">Lien</a>
+            <a class="" href="">Lien</a>
         </div>
         <div class="partenaire">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
-            <a class="text-center" href="">Lien</a>
+            <a class="" href="">Lien</a>
         </div>
         <div class="partenaire">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
-            <a class="text-center" href="">Lien</a>
+            <a class="" href="">Lien</a>
         </div>
         <div class="partenaire">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
-            <a class="text-center" href="">Lien</a>
+            <a class="" href="">Lien</a>
         </div>
         <div class="partenaire">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
-            <a class="text-center" href="">Lien</a>
+            <a class="" href="">Lien</a>
         </div>
         <div class="partenaire">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
-            <a class="text-center" href="">Lien</a>
+            <a class="" href="">Lien</a>
         </div>
         <div class="partenaire">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
-            <a class="text-center" href="">Lien</a>
+            <a class="" href="">Lien</a>
         </div>
         <div class="partenaire">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
-            <a class="text-center" href="">Lien</a>
+            <a class="" href="">Lien</a>
+        </div>
+        <div class="partenaire">
+            <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
+            <a class="" href="">Lien</a>
+        </div>
+        <div class="partenaire">
+            <img src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
+            <a class="" href="">Lien</a>
         </div>
     </section>
     </main>
