--- a/public/css/app.css
+++ b/public/css/app.css
@@ -467,13 +467,21 @@ td > a > i:hover {
 }
 
 /* Partenaires */
+#partner {
+    margin-top: 6rem;
+}
+
 #partenaires {
-    width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .partenaire {
     display: flex;
-    width: 10%;
-    height: 10%;
+    flex-direction: column;
+    align-items: center;
+    width: 250px;
+    height: auto;
     margin: 2rem 2rem;
 }
 
@@ -482,3 +490,26 @@ td > a > i:hover {
     height: auto;
 }
 
+.partenaire > a {
+    color: white;
+    background-color: var(--green);
+    border: 1px solid var(--green);
+    margin: 1rem 0;
+    padding: .3rem .3rem;
+    border-radius: .2rem;
+}
+
+.partenaire > a:hover {
+    background-color: white;
+    color: var(--green);
+    border: 1px solid var(--green);
+    margin: 1rem 0;
+    padding: .3rem .3rem;
+    border-radius: .2rem;
+    text-decoration: none;
+}
+
+
+.content {
+    background-color: white;
+}
