--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('partenaires') }}">Partenaires</a>
+                    </li>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('home') }}">Accueil</a>
@@ -50,6 +53,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('home') }}#contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('partenaires') }}">Partenaires</a>
                     </li>
                 {% endif %}
                     <li class="nav-item">
