Apparition au défilement js

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -102,7 +102,7 @@
                             Vous préservez votre indépendance professionnelle
                         </p>
                     </div>
-                    <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                    <img class="valeurs-logo reveal-1" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div>  
             <!-- Satisfaction -->
@@ -115,7 +115,7 @@
                             Votre confiance est notre préoccupation
                         </p>
                     </div>
-                     <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                     <img class="valeurs-logo reveal-2" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div>  
             <!-- Soutien -->
@@ -128,7 +128,7 @@
                             Toujours à vos côtés pour une relation pérenne
                         </p>
                     </div>
-                     <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                     <img class="valeurs-logo reveal-3" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div>  
             <!-- Engagement -->
@@ -141,7 +141,7 @@
                             Notre équipe s'engage dans une démarche proactive de qualité
                         </p>
                     </div>
-                     <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                     <img class="valeurs-logo reveal-4" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div> 
             <!-- Partage -->
@@ -154,7 +154,7 @@
                             Échange et communication, facteurs clés de synergie
                         </p>
                     </div>
-                     <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                     <img class="valeurs-logo reveal-5" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div>  
             <!-- Excellence -->
@@ -167,7 +167,7 @@
                             L'expertise de professionnel entièrement à votre service
                         </p>
                     </div>
-                     <img class="valeurs-logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                     <img class="valeurs-logo reveal-6" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
                 </div>
             </div>
             </section>
