--- a/public/css/app.css
+++ b/public/css/app.css
@@ -167,16 +167,10 @@ li {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    align-items: last baseline;
+    align-items: center;
 }
 
 .valeurs-img {
-    width: 100px;
-    height: 100px;
-}
-
-
-.valeurs-img:hover {
     width: 100px;
     height: 100px;
 }
@@ -188,14 +182,6 @@ li {
 .valeurs-logo {
     width: 200px;
     height: 70px;
-    opacity: 0;
-}
-
-.valeurs-logo:hover {
-    width: 200px;
-    height: 70px;
-    opacity: 1;
-    transition-duration: .5s;
 }
 
 /* Notre différence */
@@ -512,4 +498,31 @@ td > a > i:hover {
 
 .content {
     background-color: white;
+}
+
+[class*="reveal-"] {
+    opacity: 0;
+    transform: translateY(-50px);
+}
+
+.reveal-visible {
+    opacity: 1;
+    transform: translateY(0);
+    transition: .3s cubic-bezier(.5, 0, 0, 1);
+}
+
+.reveal-2 {
+    transition-delay: 1s;
+}
+.reveal-3 {
+    transition-delay: 1.2s;
+}
+.reveal-4 {
+    transition-delay: 1.4s;
+}
+.reveal-5 {
+    transition-delay: 1.6s;
+}
+.reveal-6 {
+    transition-delay: 1.8s;
 }
