--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -1,76 +1,78 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon profil{% endblock %}
+{% block title %}Mon espace{% endblock %}
 
 {% block body %}
 
-Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit laborum deserunt, expedita id illum voluptatibus, pariatur sapiente error ipsam dicta quas at accusamus! Ratione quisquam blanditiis adipisci incidunt, enim dolor ea tempore alias et id voluptate reprehenderit dignissimos accusamus vero voluptas nostrum illo cumque dicta odio voluptatibus officiis! Veritatis iure quae suscipit animi ullam odit dolore totam nisi. Inventore quibusdam veritatis minima non eum aperiam, numquam magnam? Amet laudantium possimus expedita! Magnam dolor provident praesentium temporibus fuga error, natus voluptate magni numquam. Ipsum nostrum minima, nisi dolores mollitia dolore corporis, maiores magni illo neque voluptas esse doloribus deserunt veritatis quo officia impedit atque alias excepturi, rem ipsa quidem ipsam reprehenderit incidunt. Atque ab et molestiae cumque placeat minima ex alias consequatur reprehenderit minus accusamus aliquid, nobis aperiam magnam nisi ea ipsam explicabo veritatis dolores praesentium rerum! Adipisci dolorem ut sapiente obcaecati sequi similique quasi laborum saepe repellendus. Ipsa cupiditate veritatis amet vel modi voluptate facilis iusto id ducimus dicta, non aspernatur fugiat quos nobis optio voluptates doloremque vero eius, distinctio aperiam ad. Ut possimus quam adipisci facere nihil corrupti natus soluta rerum porro accusantium dolore veniam ipsum quas magnam assumenda in, saepe voluptate doloremque. A voluptates laborum culpa omnis exercitationem?
-
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima veritatis sit quisquam quidem commodi nisi velit aperiam magni ad cum optio totam dolorum fugit ea quaerat iste sapiente asperiores maiores, natus nemo voluptatibus! Rem, suscipit repellendus. Quia, esse dolores. Dolorem officiis repellendus a repellat atque ab libero, hic impedit dicta.
 <div class="container-fluid text-center bg-white">
-    <h5 class="h2 card-title font-weight-bold text-success">Mon profil</h5>
-    <em class="card-text">Bienvenue sur votre espace personnel !</em>
 <!--Backoffice général-->
     <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
-        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Mon profil</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+        <a class="nav-link" id="document-tab" data-toggle="tab" href="#document" role="tab" aria-controls="document" aria-selected="false">Documents</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
     </li>
     </ul>
     <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+    <div class="tab-pane fade show active px-5" id="home" role="tabpanel" aria-labelledby="home-tab">
     
     <!--Profil-->
-        {% if company is defined and company.picture is not null %}
-            <img class="img-fluid" src="{{ vich_uploader_asset(company, 'pictureFile') }}" alt="{{ company.name|default('photo de la pharmacie') }}" />
-        {% else %}
-            <img src="https://via.placeholder.com/468x200?text=Image+de+la+pharmacie" class="img-fluid" alt="..."> 
-        {% endif %}
+        <h5 class="h2 font-weight-bold text-success">Mon espace</h5>
+        <em class="">Bienvenue sur votre espace personnel !<br>Retrouvez ici les informations de votre pharmacie</em>
+        <div>
+            {% if company is defined and company.picture is not null %}
+                <img class="img-fluid" src="{{ vich_uploader_asset(company, 'pictureFile') }}" alt="{{ company.name|default('photo de la pharmacie') }}" />
+            {% else %}
+                <img src="https://via.placeholder.com/468x200?text=Image+de+la+pharmacie" class="img-fluid" alt="..."> 
+            {% endif %}
+        </div>
         <ul class="list-group list-group-flush text-center">
             <li class="list-group-item font-weight-bold text-uppercase">Nom</li>
             <li class="list-group-item">{{ user.lastname }}</li>
             <li class="list-group-item font-weight-bold text-uppercase">Prénom</li>        
             <li class="list-group-item">{{ user.firstname }}</li>
+            <li class="list-group-item font-weight-bold text-uppercase">Nom de la pharmacie</li>
+            <li class="list-group-item">{{ user.company.name }}</li>
             <li class="list-group-item font-weight-bold text-uppercase">Adresse</li>
-            <li class="list-group-item">{{ app.user.company.firstadressfield|default('-') }} {{ app.user.company.secondadressfield|default('') }}</li>
+            <li class="list-group-item">{{ user.company.firstadressfield|default('-') }} {{ user.company.secondadressfield|default('') }}</li>
             <li class="list-group-item font-weight-bold text-uppercase">E-mail</li>
-            <li class="list-group-item">prenom@nom.fr</li>
+            <li class="list-group-item">{{ user.email|default('-') }}</li>
             <li class="list-group-item font-weight-bold text-uppercase">Téléphone</li>
-            <li class="list-group-item">0600000000</li>
+            <li class="list-group-item">{{ user.company.phone|default('-') }}</li>
         </ul>
 
         <div class="card-body">
-            <h5 class="h2 card-title font-weight-bold text-success mt-5">Mon commercial</h5>
-            <em class="card-text">Retrouvez les coordonnées de votre commercial.</em>
+            <h5 class="h2 font-weight-bold text-success mt-5">Mon commercial</h5>
+            <em class="">Retrouvez les coordonnées de votre commercial.</em>
         </div>
 
         <ul class="list-group list-group-flush text-center">
             <li class="list-group-item font-weight-bold text-uppercase">Nom Prénom</li>
             <li class="list-group-item">
-                {{ app.user.company.commercial.firstname|default('-') }} {{ app.user.company.commercial.lastname|default('') }}
+                {{ user.company.commercial.firstname|default('-') }} {{ user.company.commercial.lastname|default('') }}
             </li>
             <li class="list-group-item font-weight-bold text-uppercase">Contact</li>        
             <li class="list-group-item">
-                <a href="mailto:{{ app.user.company.commercial.email|default('-') }}">
-                {{ app.user.company.commercial.email|default('-') }}
+                <a href="mailto:{{ user.company.commercial.email|default('-') }}">
+                {{ user.company.commercial.email|default('-') }}
                 </a>
             </li>
         </ul>
     <!--Profil-->
     
     </div>
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+    <div class="tab-pane fade p-3" id="document" role="tabpanel" aria-labelledby="document-tab">
     
         <!--Documents-->
-        <div class="card text-center">
-            <h5 class="h2 card-title font-weight-bold pt-1 text-success">Mon espace documents</h5>
-            <em class="card-text p-3">Bonjour {{ user.firstname }}, <br> ici vous pourrez transmettre, consulter et télécharger vos fichiers relatifs à vos échanges auprès de votre commercial attitré.</em>
+            <h5 class="h2 font-weight-bold pt-1 text-success">Mon espace documents</h5>
+            <em class=" py-5">Bonjour {{ user.firstname }}, <br> ici vous pourrez transmettre, consulter et télécharger vos fichiers relatifs à vos échanges auprès de votre commercial attitré.</em>
             <div class="card-body">
-                <h5 class="h2 card-title font-weight-bold mt-2 text-success">Transmettre un document à mon commercial</h5>
+                <h5 class="h2 font-weight-bold mt-2 text-success">Transmettre un document à mon commercial</h5>
                 <form action="" class="mt-5">
                     <div class="form-group">
                         <div class="form-group">
@@ -87,55 +89,44 @@ Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit laborum 
                 </form>
             </div>
             <div class="card-body">
-                <h5 class="h2 card-title font-weight-bold mt-1 text-success">Consulter mes derniers documents</h5>  
+                <h5 class="h2 font-weight-bold mt-1 text-success">Consulter mes derniers documents</h5>  
                 <table class="table table-hover">
                     <thead class="thead-light">
                         <tr>
                         <th scope="col">Nom du document</th>
                         <th scope="col">Format</th>
                         <th scope="col">Date d'ajout</th>
+                        <th scope="col">Disponnible jusqu'au</th>
                         <th scope="col">Télécharger</th>
                         </tr>
                     </thead>
                     <tbody>
+                        {% for document in documents %}
                         <tr>
-                        <th scope="row">Compte rendu réunion</th>
-                        <td>.pdf</td>
-                        <td>01/06/2019</td>
+                        <th scope="row">{{ document.name|default('-') }}</th>
+                        <td>{{ document.documentFile.extension|default('-')}}</td>
+                        <td>{{ document.updatedAt|date('d/m/y')|default('-') }}</td>
+                        <td>{{ document.deletedAt is empty? "-" : document.deletedAt|date('d/m/y') }}</td>
                         <td>
-                            <a href="">
-                                <i class="fas fa-file-upload"></i>
+                            <a href="http://127.0.0.1:8000{{ vich_uploader_asset(document, 'documentFile') }}">
+                                <i class="fas fa-file-upload fa-lg"></i>
                             </a>
                         </td>
                         </tr>
+                        {% else %}
                         <tr>
-                        <th scope="row">Compte rendu réunion</th>
-                        <td>.pdf</td>
-                        <td>01/06/2019</td>
-                        <td>
-                            <a href="">
-                                <i class="fas fa-file-upload"></i>
-                            </a>
-                        </td>
+                            <td colspan=4>Aucun document à télécharger</td>
                         </tr>
-                        <tr>
-                        <th scope="row">Compte rendu réunion</th>
-                        <td>.pdf</td>
-                        <td>01/06/2019</td>
-                        <td>
-                            <a href="">
-                                <i class="fas fa-file-upload"></i>
-                            </a>
-                        </td>
-                        </tr>
+                        {% endfor %}
                     </tbody>
                     </table>
             </div>
-        </div>
         <!--Documents-->
     
     </div>
-    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+    <div class="tab-pane fade py-5" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim rerum repudiandae totam quasi iure cum dignissimos eveniet possimus, velit perferendis quis quaerat ipsam, veniam dicta nihil distinctio voluptatem similique rem! Itaque consequuntur enim velit veritatis, amet neque repellendus inventore numquam provident accusantium illo corporis quos, iure modi quis dolorem molestiae.
+    </div>
     </div>
 </div>
 {% endblock %}
