--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -54,6 +54,7 @@
                     </a>
                     </div>
                 </div>
+            <hr class="separator">
             </section>
             <!-- Citation Section -->
             <section id="about" class="container-fluid p-0 text-center py-3 mt-5">
@@ -90,6 +91,7 @@
                         </div>
             </section>
             <!-- N O S  V A L E U R S -->
+            <hr class="separator">
             <section id="valeurs">
             <!-- Respect -->
             <div class="container-fluid p-0 text-center my-5">
@@ -171,6 +173,7 @@
                 </div>
             </div>
             </section>
+            <hr class="separator">
             <!-- N O T R E  D I F F E R E N C E -->
             <section id="difference">
                 <div class="container-fluid p-0 text-center">
@@ -220,6 +223,7 @@
                 <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
             </div>
             </section>
+            <hr class="separator">
             <!-- N O S  O B J E C T I F S -->
             <section id="objectifs">
                 <div class="container-fluid p-0 text-center m-5">
@@ -288,6 +292,7 @@
                 class="img-fluid"
             >
             </section>
+            <hr class="separator">
             <!-- C O N T A C T -->
             <section id="contact" class="container-fluid p-0 text-center py-5 m-0">
              <h2 class="titre-contact h1-responsive font-weight-bold my-5">Contact</h2>
