--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -5,7 +5,7 @@
         {% if theme.picture is defined %}
             <img id="ephemeride" src="{{ vich_uploader_asset(theme, 'pictureFile') }}"  alt="">
         {% else %}
-            <img id="logo" src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
+            <img id="ephemeride" src="{{ asset('images/ynovagroup_logo.png') }}" alt="Ynovagroup Logo">
         {% endif %}
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
