--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -331,4 +331,7 @@
                 </div>
             </div>
         </main>
+        {# <div class="sticky-slim-footer">
+            
+        </div> #}
 {% endblock %}
