changé container-fluid par container

--- a/templates/home/partenaires.html.twig
+++ b/templates/home/partenaires.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 
 <!-- Partenaires -->
-<div id="partner" class="container-fluid p-0">
+<div id="partner" class="container p-0">
     <main class="container-fluid mt-5">
     <h1 class="h2 mt-3 text-center">Nos partenaires</h1>
     <section id="partenaires">
