ajouté commande pour suppression des fichiers dont la date est dépassée + slider en cours

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -170,7 +170,11 @@
             <!-- N O T R E  D I F F E R E N C E -->
             <section id="difference">
                 <div class="container-fluid p-0 text-center">
-                <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
+                    <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
+                    {{ include('/home/_nosdifferences.html.twig') }}
+                </div>
+                {# <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
+                <div class="container-fluid p-0 text-center">
                     <div class="panel">
                         <div class="panel-box">
                             <div class="panel-box-text m-3">
@@ -207,7 +211,7 @@
                             </div>
                         </div>
                     </div>    
-                </div>  
+                </div>   #}
             </section>
             <!-- I N T E R L U D E -->
             <section>
