--- a/templates/backend/partials/_sidebar.html.twig
+++ b/templates/backend/partials/_sidebar.html.twig
@@ -73,6 +73,12 @@
                       RSS
                   </a>
               </li>
+              <li class="nav-item">
+                  <a class="nav-link text-dark" href="{{ path('backend_partner_index') }}">
+                      <i class="far fa-handshake"></i>                          
+                      Partenaires
+                  </a>
+              </li>
             </ul>
             {% endif %}
           </div>
